NPE fixes